sistema_casilda/tmp/debug_out.txt
  File "<string>", line 1
    import os, sys, django; sys.path.append(os.getcwd()); os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'core.settings'); django.setup(); from django.test import RequestFactory; from django.contrib.auth.models import User; from django.contrib.messages.storage.fallback import FallbackStorage; from expedientes.views import mesa_dashboard; from expedientes.context_processors import unread_notifications; user = User.objects.get(username='mariana.martinez'); rf = RequestFactory(); request = rf.get('/expedientes/mesa/dashboard/'); request.user = user; request._messages = FallbackStorage(request); res = mesa_dashboard(request); if hasattr(res, 'render'): res.render(); print('Rendered Success')
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       ^^
SyntaxError: invalid syntax
